<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/shape_layout"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circle">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_brand_image"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/android_jetpack"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter" />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign up"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:textColor="@color/purple_500"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/name"
                android:padding="5dp"
                android:inputType="textEmailAddress" />
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/prompt_email"
                android:padding="5dp"
                android:inputType="textEmailAddress" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:padding="5dp" />
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/prompt_confirm_password"
                android:inputType="textPassword"
                android:padding="5dp" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@drawable/button_gradient"
                android:text="@string/signup"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>


        </LinearLayout>

</androidx.core.widget.NestedScrollView>