<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.login.ResetPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="16dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Your Password?"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:textColor="@color/purple_500"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:textStyle="normal"
            android:layout_marginBottom="20dp"
            android:textColor="@color/purple_200"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/prompt_email"
            android:padding="5dp"
            android:inputType="textEmailAddress" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/button_gradient"
            android:text="@string/reset"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>
<TextView
    android:id="@+id/tv_back"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Back"
    android:textColor="@color/mango_tango"
    android:textStyle="bold"
    android:textSize="20sp"
    android:layout_marginTop="10dp">

</TextView>
    </LinearLayout>


</FrameLayout>